Add several improvement on POST CRS and POST CT endpoints
## POST CRS and POST CT
- Refactor the search query building code
- Change default search limit to a large value
- Add includeDeprecated (exclude InactivaIndicator)
- Change default return fields
- Add flag to "returnAllFields"
## POST CRS
- Correct the handling of returnBoundProjectedAndProjectedBasedOnWgs84 and returnBoundGeographic2DAndWgs84
- Change extent.name to extent.description
## POST CT
- Make source and target crs interchangable
- Add id and code
- Remove "includeHorizontal" and "includeVertical" and add kind instead. Add "All" as a magical keyword
## Info
- Add /info endpoint
## Test
- Make schema authority configurable
- Add integration tests
- Fix unit test
## Doc
- Update openapi doc to be aligned with the latest API
## Other
- Remove redundant code and extract common component
