# docs/api_spec/crs-catalog-openapi-v3.yaml
@@ -133,6 +133,21 @@ paths:
           schema:
             $ref: '#/definitions/PointsInAOUResponse'
 
+  /info:
+    get:
+      tags:
+        - "Info"
+      summary: "Version info"
+      description: "For deployment available public `/info` endpoint, \
+        \ which provides build and git related information."
+      operationId: "Version info"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: "Version info."
+          schema:
+            $ref: "#/definitions/VersionInfo"
 definitions:
   PointsInAOUSearch:
     description: Body for checking points against Area of use
@@ -142,21 +157,21 @@ definitions:
         description: Record of CRS or CT to check points against
       points:
         type: array
-        description: List of points to check against CRS or CT polygon
+        description: List of points to check against CRS or CT bounding boxes
         items:
           $ref: '#/definitions/Point'
   PointsInAOUResponse:
     properties:
       bboxFailedPoint:
         type: array
-        description: List of failed points, ones that aren't in polygon
+        description: List of failed points, ones that aren't in bounding box
         items:
           $ref: '#/definitions/bboxFailedPoint'
       maxDistKmOutsideBBox:
         type: number
-        description: Point distance with highest km outside polygon
+        description: Point distance with highest km outside bounding box
   bboxFailedPoint:
-    description: A point that didn't land in polygon for area of use search
+    description: A point that didn't land in the bounding box for area of use search
     properties:
       point:
         $ref: '#/definitions/Point'
@@ -165,7 +180,7 @@ definitions:
         description: A zero-based index of the point in the input "points" array
       approximateKmDistanceOutside:
         type: number
-        description: Kilometers outside the record's polygon
+        description: Kilometers outside the record's bounding box
   Point:
     description: Lat, long point
     properties:
@@ -176,36 +191,45 @@ definitions:
   CoordinateTransformationSearch:
     description: Body for searching on CTs
     properties:
-      includeHorizontal:
-        type: boolean
-        description: Whether to just include horizontal CTs
-      includeVertical:
-        type: boolean
-        description: Whether to just include vertical CTs
       codeSpace:
         type: string
         description: Corresponds to CodeSpace field on CT records
       name:
         type: string
         description: Corresponds to Name field on CT records
+      id:
+        type: string
+        description: Corresponds to ID field on CT records
+      code:
+        type: string
+        description: Corresponds to Code field on CT records
+      kind:
+        type: string
+        description: Corresponds to the Kind field on CT records. Default is to not return CT records with Kind "VerticalTransformation". Viable options include "Transformation", "ConcatenatedOperation", "VerticalTransformation", "ExcludeVertical" (default) and "All". "All" is a special value which indicates returning records of all kinds.
       sourceCRS:
         type: string
-        description: Corresponds to SourceCRS field on CT records
+        description: Corresponds to SourceCRS.SourceCRSID (record id), e.g., "osdu:reference-data--CoordinateReferenceSystem:Geographic2D:EPSG::4198:". As SourceCRS and TargetCRS are interchangeable, it will also search TargetCRS.TargetCRSID
       targetCRS:
         type: string
-        description: Corresponds to TargetCRS field on CT records
+        description: Corresponds to TargetCRS.TargetCRSID (record id), e.g., "osdu:reference-data--CoordinateReferenceSystem:Geographic2D:EPSG::4198:". As SourceCRS and TargetCRS are interchangeable, it will also search SourceCRS.SourceCRSID
       latitude:
         type: number
-        description: Latitude point for searching on CT polygon
+        description: Latitude point for searching on CT bounding box
       longitude:
         type: number
-        description: Longitude point for searching on CT polygon
+        description: Longitude point for searching on CT bounding box
+      includeDeprecated:
+        type: boolean
+        description: Whether to return deprecated records marked with InactiveIndicator=true. Default is false.
       offset:
         type: integer
         description: Corresponds to offset on search service
       limit:
         type: integer
         description: Corresponds to limit on search service
+      returnAllFields:
+        type: boolean
+        description: Whether to return all fields in the record. Default is false and only a subset is returned
 
   CoordinateReferenceSystemSearch:
     description: Body for searching on CRSs
@@ -240,24 +264,31 @@ definitions:
       verticalAxisUnitId:
         type: string
         description: Corresponds to CoordinateSystem.VerticalAxisUnitID field on CRS records
-      latitude:
-        type: number
-        description: Latitude point for searching on CRS polygon
-      longitude:
-        type: number
-        description: Longitude point for searching on CRS polygon
       returnBoundProjectedAndProjectedBasedOnWgs84:
         type: boolean
-        description: Whether or not to return bound projected type or projected based on wgs84 type
+        description: Whether or not to only return bound projected type or projected type based on wgs84. If true, it only returns CRS 1. with Kind as "BoundProjected" or 2. with Kind as "projected" and BaseCRS.AuthorityCode.Code as 4326
       returnBoundGeographic2DAndWgs84:
         type: boolean
-        description: Whether or not to return bound geographic 2d type
+        description: Whether or not to only return bound geopraphic 2d type. If true, it only returns CRS 1. with Kind as "BoundGeographic2D" or 2. with Kind as "geographic 2D" and Code as 4326 and CodeSpace as "EPSG"
+      latitude:
+        type: number
+        description: Latitude point for searching on CRS bounding box
+      longitude:
+        type: number
+        description: Longitude point for searching on CRS bounding box
+      includeDeprecated:
+        type: boolean
+        description:
+          Whether to return deprecated records marked with InactiveIndicator=true. Default is false
       offset:
         type: integer
         description: Corresponds to offset on search service
       limit:
         type: integer
         description: Corresponds to limit on search service
+      returnAllFields:
+        type: boolean
+        description: Whether to return all fields in the record. Default is false and only a subset is returned
 
   BaseCRS:
     properties:
@@ -282,9 +313,9 @@ definitions:
 
   Extent:
     properties:
-      name:
+      description:
         type: string
-        description: Name of exent. Corresponds to PreferredUsage.Extent.Name in the record.
+        description: Description of extent. Corresponds to PreferredUsage.Extent.Description in the record.
 
   SearchResponse:
     description: Results for most V3 endpoints
@@ -307,3 +338,45 @@ definitions:
       totalCount:
         type: integer
         description: Total count of search results
+
+  VersionInfo:
+    type: "object"
+    properties:
+      groupId:
+        type: "string"
+        description: "Maven artifact group ID."
+      actifactId:
+        type: "string"
+        description: "Maven artifact ID."
+      version:
+        type: "string"
+        description: "Maven artifact version"
+      buildTime:
+        type: "string"
+        description: "Maven artifact build time"
+      branch:
+        type: "string"
+        description: "Current git branch"
+      commitId:
+        type: "string"
+        description: "Latest commit hash"
+      commitMessage:
+        type: "string"
+        description: "Latest commit message"
+      connectedOuterServices:
+        type: "array"
+        description: "Connected outer services information"
+        items:
+          $ref: "#/definitions/ConnectedOuterService"
+    description: "Version info."
+
+  ConnectedOuterService:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+        description: "Connected outer service name."
+      version:
+        type: "string"
+        description: "Connected outer service version."
+    description: "Connected outer service information."
